--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
          <img src="img/gigih.JPG" alt="" class="img-thumbnail rounded-circle shadow">
          <h2 class="text-center">GIGIH NUR HENDRAWAN</h2>
          <p class="">jangan biarkan rintangan menghalangimu</p>
-         <p class="">photographer | pelawak | penindas</p>
+         <p class="">photographer | pelawak | bakul tempe</p>
     </div> 
     <section class="about-me ab" id="about-me">
         <div class="container">
