--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                       <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                                     </div>
                                     <div class="form-group">
-                                            <label for="exampleFormControlTextarea1">Example textarea</label>
+                                            <label for="exampleFormControlTextarea1">tulis pertanyaan disini</label>
                                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                                     </div>
                                     <button type="button" class="btn btn-primary"> MASUK</button>
